syntax = "proto3";
import "Header.proto";
import "Request.proto";
import "Response.proto";
import "Event.proto";

package ru.sovcombank.hackaton.proto;
option java_multiple_files = true;
option java_outer_classname = "ExchangeInfoMessageProto";
option optimize_for = SPEED;

/**
    Собственно само сообщение протокола.
    Поле header должно присутствовать ва всех сообщениях.
    Поля request, response, event присутствуют в зависимости от типа cообщения.
*/

message ExchangeInfoMessage {
    Header header = 1; // Тело заполовка документа
    oneof body {
        Request request = 2; // Тело запроса документа
        Response response = 3; // Тело ответа документа
        Event event = 4; // Тело события документа
    }
}

service ExchangeService {
    // Метод для обработки запроса
    rpc ExchangeRequest(ExchangeInfoMessage) returns (ExchangeInfoMessage) {}

    // Метод для обработки ответа
    rpc ExchangeResponse(ExchangeInfoMessage) returns (ExchangeInfoMessage) {}

    // Метод для обработки события
    rpc ExchangeEvent(ExchangeInfoMessage) returns (ExchangeInfoMessage) {}
}
